<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="number.android.wdvendor.activities.VendorKeyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/wizard1"
        android:orientation="vertical"
        android:gravity="center"
        android:animateLayoutChanges="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vendor_mobile_label"
            android:textAlignment="center"
            android:textSize="24dp"
            android:text="@string/vendor_mobile_label"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/vendor_mobile"
            android:layout_gravity="center"
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:maxLines="1"
            android:gravity="center"
            android:textSize="36sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_continue"
            android:text="@string/btn_continue"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/wizard2"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:animateLayoutChanges="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vendor_key_label"
            android:textAlignment="center"
            android:textSize="24dp"
            android:text="@string/vendor_key_label"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/vendor_key"
            android:layout_gravity="center"
            android:imeOptions="actionDone"
            android:inputType="textVisiblePassword"
            android:maxLines="1"
            android:gravity="center"
            android:textSize="36sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_verify"
            android:text="@string/btn_verify"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</RelativeLayout>
