<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="number.android.wdvendor.activities.CustomerSummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stats"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical"
        android:background="@color/grey_light"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/can_count"
            android:hint="20"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:textSize="13sp"
            android:id="@+id/can_count_label"
            android:layout_marginBottom="10dp"
            android:text="@string/can_count_label"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_below="@+id/stats"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Name"
            android:textSize="14sp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:textColor="@color/black"
            android:id="@+id/name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="976543211"
            android:textSize="14sp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:textColor="@color/black"
            android:id="@+id/mobile_number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="Your delivery address"
            android:id="@+id/address"
            android:textSize="14sp"
            android:maxLines="3"
            android:enabled="false"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Landmark"
            android:id="@+id/landmark"
            android:textSize="14sp"
            android:drawablePadding="15dp"
            android:background="@drawable/edit_text_border"
            android:imeOptions="actionNext"
            android:layout_marginTop="10dp"/>

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/loading_indicator"
            android:indeterminate="true"
            app:mpb_progressStyle="horizontal"
            app:mpb_useIntrinsicPadding="false"
            android:visibility="gone"
            android:enabled="false"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_gravity="right"
            android:text="@string/update"/>

    </LinearLayout>

    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/action"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:gravity="bottom">

        <Button android:layout_width="0dp"
            android:height="50dp"
            android:id="@+id/accept_customer"
            android:text="@string/accept"
            android:background="@color/white"
            android:textColor="@color/colorPrimary"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/reject_customer"
            android:text="@string/reject"
            android:textColor="@color/colorPrimary"
            android:background="@color/white"
            android:layout_weight="1"/>

    </TableRow>

</RelativeLayout>
